ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "2048-ingress"
  namespace: "2048-game"
  labels:
    app: 2048-nginx-ingress
spec:
  ingressClassName: alb
  rules:
    - host: 2048.example.com
      http:
        paths:
          - path: /*
            backend:
              service:
                name: "service-2048"
                port:
                  number: 80
